--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -16,7 +16,7 @@
       "Watanabe[_proNickname:Watanabe][_proFullName:Yuuya Watanabe][#malePronouns#]",
       "Randy Buehler[_proNickname:Buehler][_proFullName:Randy Buehler][#malePronouns#]",
       "Ruel[_proNickname:Ruel][_proFullName:Olivier Ruel, Antoine Ruel][#malePronouns#]",
-      "Saitō[_proNickname:Saitō][_proFullName:Tomoharu Saitō][#malePronouns#]",
+      "Saito[_proNickname:Saito][_proFullName:Tomoharu Saito][#malePronouns#]",
       "Reid Duke[_proNickname:Reid][_proFullName:Reid Duke][#malePronouns#]",
       "William Jensen[_proNickname:Baby Huey][_proFullName:William Jensen][#malePronouns#]",
       "Frank Karsten[_proNickname:Karsten][_proFullName:Frank Karsten][#malePronouns#]",
