clickbait charity variety

--- a/src/data/grammar/vocab/adjectives/adj-person-characteristic.yaml
+++ b/src/data/grammar/vocab/adjectives/adj-person-characteristic.yaml
@@ -18,8 +18,9 @@ adjPersonCharacteristic:
 - naive
 - level-headed
 - unpredictable
+- shrewd
 - "#adj#"
-
+- "#adjValue#"
 
 adjPersonCharacteristicComparative:
 - younger
