--- a/src/data/grammar/headlines/clickbait.yaml
+++ b/src/data/grammar/headlines/clickbait.yaml
@@ -10,9 +10,7 @@ clickbait:
 - 'PICTURES: #pro#''s [_cosplayAdj:amazing,convincing,elaborate,unconventional]#_cosplayAdj#
   cosplay of [_who:#randomCardAlone#,#character#]#_who#'
 - 'New preview card from #teaserCardSet#! Is it [_desc:#descriptor#,#adjComparative#]#_desc.a# #realPowerfulCard#?'
-- "[_opener:SHOCKER!,Unbelievable!,Rumor#colon#,BREAKING#colon#,It's true#colon#,UPDATE#colon#]#_opener#
-  #pro# [_rule:petitioned,solicited,approached,contacted,called out]#_rule# by #wackyCharacter#
-  to #dumbScenario#"
+- "[_opener:SHOCKER!,Unbelievable!,Rumor#colon#,BREAKING#colon#,It's true#colon#,UPDATE#colon#]#_opener# #pro# [_rule:petitioned,solicited,approached,contacted,called out]#_rule# by #wackyCharacter# to #dumbScenario#"
 - "How #verbSolutionGerund# helped #pro# #verbDesireableOutcomeIntransitive#"
 - "#clickbaitShocker.capitalizeAll#"
 
