--- a/src/data/grammar/mtg/community/tournament-hijinks.yaml
+++ b/src/data/grammar/mtg/community/tournament-hijinks.yaml
@@ -103,16 +103,69 @@ dumbScenario:
 - "[_lobby:push #officialEntity# to,ask #officialEntity# to,plead with #officialEntity# to,try to,attempt to]#_lobby# [_goal:bring back damage on the stack,bring back mana burn,allow players to mana weave again,bring back the planeswalker redirection rule,return to using “he or she” in rules text,bring back mana burn]#_goal#"
 - 'join the development team of their fantasy [_game:CCG,TCG,roleplaying game,miniatures game,tabletop game] [_gameName:"#creatureTypes# #placeNoun#","Zoxelorn
   #count#","#abstractMassOrPluralNounOrEmotion# #_fantasyCharacterClass#","#itemNoun# #_scenarioNoun#","#characterClass# #groupNoun##colon# #tabletopGameSuffix#","#creatureTypes# #_scenarioNoun##colon# the #abstractNoun#", "#characterClass.s# of #locationRealOrFantasy#"]#_gameName.capitalizeAll#'
-- join their [_target:#playerCategory.a#,#animal.a#,#creatureType.a#,#miscPersonSingular.a#][_rule:Fist Bump,Get Completely Loaded,Drive With Your Eyes Closed,Watch
-  Anime,Don't Pay Your Taxes,Wander Aimlessly,Heckle a Child,Mana Weave,#nounActivity.capitalizeAll#,#keywordAction.capitalizeAll#,#verbExclaim.capitalizeAll#,Kiss #_target.a#]"#_rule# For Charity" [_initiative:initiative,campaign,drive,effort]#_initiative#
+- "[_join:join,donate to,participate in,help launch][_initiative:initiative,campaign,drive,effort,project,raffle,fundraiser]#_join# #their# \"#charity.capitalizeAll#\" #_initiative#"
 - participate in their [_magicType:Two-Headed Giant,Pauper EDH,Vintage Singleton,No
   LD/No Counters/No Burn]#_magicType# invitational tournament
-- 'covertly collect information on #pro# in order to [_rule:learn #their# shuffling routine,get a better idea of what #they# look#s# like naked,know what hate cards to board
-  in against them]#_rule#'
+- 'covertly collect information on #pro# in order to [_rule:learn #their# shuffling routine,get a better idea of what #they# look#s# like naked,know what hate cards to board in against them]#_rule#'
 - infiltrate WOTC headquarters and [_act:destroy the reserved list,trash MaRo's desk,pee in the Mana Pool,steal the Shivan Dragon statue,fall asleep in The Pit]#_act#
 - 'teach them how to beat #deck#'
 - fix MTGO so that it works properly
 - 'help them complete #their# #realBadCard# playset'
+
+_charityActivity:
+- "Fist Bump"
+- "Get Completely Loaded"
+- "Drive With Your Eyes Closed"
+- "Watch Anime"
+- "Don't Pay Your Taxes"
+- "Wander Aimlessly"
+- "Heckle a Child"
+- "Mana Weave"
+- "#nounActivity.capitalizeAll#"
+- "#keywordAction.capitalizeAll#"
+- "#verbExclaim.capitalizeAll#"
+- "Play #format#"
+- "[_target:#playerCategory.a#,#animal.a#,#creatureType.a#,#miscPersonSingular.a#]Kiss #_target.a#"
+
+_charityFuture:
+- "future"
+- "tomorrow"
+- "world"
+- "judge program"
+- "#popularFormat# environment"
+
+_charityFoundation:
+- foundation
+- institute
+- agency
+- alliance
+
+_charityWelfare:
+- relief
+- development
+- learning
+- awareness
+- tolerance
+- advancement
+- equality
+- justice
+
+_charityOtherCause:
+- "[_good:good,better,decent,acceptable]a return to #_good# print quality"
+- "fair print runs"
+- "[_desc:restrained,modest,fair,short,sensible]#_desc.a# banlist"
+
+charity:
+- "[_charity:charity,charity,#adjSuperlative.a# #_charityFuture#,#adjSuperlative.a# #_charityFuture#,a good cause,#_charityOtherCause#]#_charityActivity# For #_charity#"
+- "[_benefit:#pluralNounOrMassNoun#,#nounActivity#,#format# Decks For][_beneficiary:#character#,#person#]#_benefit# for #_beneficiary#"
+- "[_victim:the #creatureTypes#,the #characterClass.s#,the #_animalPlural#,#person# ,#format#][_aggressor:#peoplePlural#,#peoplePlural#,#officialEntity#][_danger:,, from #_aggressor#]Save #_victim##_danger#"
+- "make [_what:#format#,#cardCategoryClassTerm#][_adj:#adj#,#cardQuality#]#_what# #_adj# again"
+- "[_effort:#pluralNoun#,#cardCategory.s#,#nounActivity#] for #adjSuperlative.a# #_charityFuture#"
+- "[_entity:#creatureTypeOrCharacterClass.s#,#cardCategory.s#,#playerCategory.s#]#_entity# without borders"
+- "#_charityFoundation# for [_recipient:#characterClass#,#creatureTypes#,#animal#]#_recipient# #_charityWelfare#"
+- "[_what:#creatureTypeOrCharacterClass#]Big #_what#, Little #_what#"
+- "[_what:#creatureType.s#,#characterClass#,#playerCategory#,#cardCategory#,#person#][_defense:defense,legal defense,freedom,development]#_what# #_defense# fund"
+- "No [_what:#creatureType.s#,#characterClass#,#cardCategory#,#animal#]#_what# left behind"
 
 _fantasyCharacterClass:
 - "#fantasyCharacterClass#"
